[package]
name = "rusty_workflow_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
cron = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.46.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

